--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^12.16.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "next": "15.3.3",
